# Pathtracer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  scene.json
assets/scenes/: 4spheres.scene  4spheres1.scene  bigLight.json  redGreenRoomMetallic.json  redGreenRoomSkeleton.json  skeleton.json  skeleton.scene  sphere.scene  temp.json  test.json  test.scene
include/: Input.h  Pathtracer.h  Program.h  Raytracer.h  Renderer.h
include/BVH/: BVH.h  BVH6SidedBuilder.h  BVHBasicBuilder.h  BVHMortonBuilder.h  BVHSahBuilder.h  MortonCodes.h
include/Object/: Camera.h  Graphical.h  GraphicalObject.h  Light.h  Material.h  Model.h  Object.h  Triangle.h  Vertex.h
include/ObjectAppearance/: Color.h  Material.h  Model.h
include/OpenGL/: BufferController.h  GLObject.h  RaytraceShader.h  Shader.h  ShaderProgram.h  TraceShader.h
include/Other/: Scene.h  SceneLoader.h  SceneLoaderPbrt.h  Tweener.h
include/Raycast/: Ray.h  Raycast.h
include/System/: Assets.h  BVH.h  ImGUIHandler.h  Input.h  Logger.h  MyTime.h  Physics.h  Renderer.h  SDLHandler.h  Scene.h
include/UI/: IconDrawer.h  ImGUIHandler.h  ImGUIWindowDrawer.h  InspectorDrawer.h  ObjectManipulator.h  SDLHandler.h  WindowDrawer.h
include/Utils/: Action.h  Color.h  Debug.h  ImGuiExtensions.h  JsonUtility.h  MathExtensions.h  Matrix.h  MortonCodes.h  MyMath.h  Utils.h  VectorSafe.h
libs/gl-radix-sort/: RadixSort.hpp  gl_utils.hpp
libs/glad/: glad.c  glad.h
libs/imgui/src/: ImFileDialog.cpp
libs/minipbrt/: minipbrt.cpp  minipbrt.h
libs/rapidobj/: rapidobj.hpp
shaders/: intersection.glsl  light.glsl  pathtracer.frag  raytracer.frag  sampling.glsl  shading.glsl
shaders/common/: common.glsl  utils.glsl
shaders/compute/: buildBVH.comp  mortonCodes.comp  precomputeCoefs.comp  precomputeTriCoefs.comp  raycast.comp
shaders/compute/bvh/: bvh_part1_morton.comp  bvh_part1morton.comp  bvh_part2_build.comp  bvh_part2build.comp
shaders/default/: _shaderBase.glsl  shaderBase.glsl  utils.glsl
src/: Input.cpp  Pathtracer.cpp  Program.cpp  Renderer.cpp
src/BVH/: BVH.cpp  BVH6SidedBuilder.cpp  BVHBasicBuilder.cpp  BVHMortonBuilder.cpp  BVHSahBuilder.cpp  BVH_6sided.cpp  BVH_basic.cpp  BVH_morton.cpp  BVH_sah.cpp  MortonCodes.cpp
src/Object/: Camera.cpp  Graphical.cpp  GraphicalObject.cpp  Light.cpp  Material.cpp  Model.cpp  Object.cpp  Triangle.cpp
src/ObjectAppearance/: Material.cpp  Model.cpp
src/OpenGL/: BufferController.cpp  GLObject.cpp  RaytraceShader.cpp  Shader.cpp  ShaderProgram.cpp  TraceShader.cpp
src/Other/: Scene.cpp  SceneLoader.cpp  SceneLoaderPbrt.cpp  Tweener.cpp
src/Ray/: Raycast.cpp
src/System/: BVH.cpp  Canvas.cpp  ImGUIHandler.cpp  Input.cpp  Logger.cpp  MyTime.cpp  Physics.cpp  Renderer.cpp  SDLHandler.cpp  Scene.cpp
src/UI/: IconDrawer.cpp  ImGUIHandler.cpp  ImGUIWindowDrawer.cpp  InspectorDrawer.cpp  ObjectManipulator.cpp  SDLHandler.cpp  WindowDrawer.cpp
src/Utils/: ImGuiExtensions.cpp  MyMath.cpp  Utils.cpp
